--- a/TotalCrossVM/builders/android/apps/tcvm/.classpath
+++ b/TotalCrossVM/builders/android/apps/tcvm/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="P:/android-sdk-windows/add-ons/addon_google_apis_google_inc_8/libs/maps.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="P:/android-sdk-windows/platforms/android-10/android.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
