--- a/TotalCrossVM/builders/xcode/TotalCross.xcodeproj/xcshareddata/xcschemes/TotalCross.xcscheme
+++ b/TotalCrossVM/builders/xcode/TotalCross.xcodeproj/xcshareddata/xcschemes/TotalCross.xcscheme
@@ -75,7 +75,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable>
          <BuildableReference
