fixing line ending problems with txt file

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@ Launcher             -text
 *.jad                -text
 *.cod                -text
 *.mobileprovision    text  eol=lf
+TotalCrossVM/src/nm/NativeMethodsPrototypes.txt text eol=lf
