--- a/TotalCrossVM/builders/vc2008/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2008/TCVM.vcproj
@@ -2011,6 +2011,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\src\nm\lang\Reflection.c"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\nm\lang\String.c"
 					>
 				</File>
