--- a/TotalCrossVM/builders/vc2008/Launcher.vcproj
+++ b/TotalCrossVM/builders/vc2008/Launcher.vcproj
@@ -52,7 +52,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\src\tcvm"
+				AdditionalIncludeDirectories="..\..\src\tcvm;..\..\src\sqlite"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
