--- a/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj.filters
+++ b/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj.filters
@@ -155,6 +155,9 @@
     <Filter Include="Native methods\ui\wp8">
       <UniqueIdentifier>{2d73fba5-43c4-4ddd-b79f-8940d4d86135}</UniqueIdentifier>
     </Filter>
+    <Filter Include="VM Files\win">
+      <UniqueIdentifier>{16f98fc4-ed4e-46d2-819e-f5294bd5321f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WindowsPhoneRuntimeComponent1.cpp" />
@@ -651,7 +654,6 @@
     <ClCompile Include="..\..\..\src\zlib\zutil.c">
       <Filter>ZLib</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\init\nativeProcAddressesTC.c" />
     <ClCompile Include="..\..\..\src\axtls\aes.c">
       <Filter>axtls</Filter>
     </ClCompile>
@@ -663,6 +665,12 @@
     </ClCompile>
     <ClCompile Include="..\..\..\src\launchers\wp8\MainViewFactory.cpp">
       <Filter>Native methods\ui\wp8</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\nm\ui\wp8\cppwrapper.cpp">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\init\nativeProcAddressesTC.c">
+      <Filter>init</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1092,6 +1100,15 @@
       <Filter>Native methods\ui\wp8</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\launchers\wp8\MainViewFactory.h">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\tcvm\win\tcthread_c.h">
+      <Filter>VM Files\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\nm\io\win\File_c.h">
+      <Filter>Native methods\io\headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\nm\ui\wp8\cppwrapper.h">
       <Filter>Native methods\ui\wp8</Filter>
     </ClInclude>
   </ItemGroup>
