--- a/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj.filters
+++ b/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj.filters
@@ -675,6 +675,12 @@
     <ClCompile Include="..\..\..\src\nm\ui\wp8\Direct3DBase.cpp">
       <Filter>Native methods\ui\wp8</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\nm\ui\wp8\graphics_wrapper.cpp">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\nm\ui\wp8\CubeRenderer.cpp">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowsPhoneRuntimeComponent1.h" />
@@ -1123,6 +1129,9 @@
     <ClInclude Include="..\..\..\src\nm\ui\wp8\DirectXHelper.h">
       <Filter>Native methods\ui\wp8</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\nm\ui\wp8\CubeRenderer.h">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\src\nm\NativeMethods.txt">
@@ -1148,13 +1157,5 @@
     <None Include="..\..\..\src\nm\ui\darwin\Window_c.m">
       <Filter>Native methods\ui\darwin</Filter>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="..\..\..\src\nm\ui\wp8\SimplePixelShader.hlsl">
-      <Filter>Native methods\ui\wp8</Filter>
-    </FxCompile>
-    <FxCompile Include="..\..\..\src\nm\ui\wp8\SimpleVertexShader.hlsl">
-      <Filter>Native methods\ui\wp8</Filter>
-    </FxCompile>
   </ItemGroup>
 </Project>
