--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ TotalCrossVM/src/launchers/android/bin
 TotalCrossVM/src/launchers/android/gen
 TotalCrossVM/builders/xcode/TotalCross.xcworkspace/xcuserdata/tcbuilder.xcuserdatad/UserInterfaceState.xcuserstate
 TotalCrossVM/builders/xcode/TotalCross.xcworkspace/xcuserdata/tcbuilder.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+# Files generated from VisualStudio
+*.ilk
+*.exp
+TotalCrossVM/builders/vc*/**/*.pdb
+TotalCrossVM/builders/vc*/**/*.lib
+TotalCrossVM/builders/vc*/**/*.dll
