--- a/TotalCrossVM/builders/android/apps/singleapk/AndroidManifest.xml
+++ b/TotalCrossVM/builders/android/apps/singleapk/AndroidManifest.xml
@@ -49,31 +49,31 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="10" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
-    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="14" />
+    <uses-permission android:name="android.permission.READ_LOGS" android:required=”false” />
+    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" android:required=”false” />
+    <uses-permission android:name="android.permission.INTERNET" android:required=”false”/>
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" android:required=”false”/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" android:required=”false”/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" android:required=”false”/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" android:required=”false”/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" android:required=”false”/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" android:required=”false”/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" android:required=”false”/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:required=”false”/>
+    <uses-permission android:name="android.permission.VIBRATE" android:required=”false”/>
+    <uses-permission android:name="android.permission.CAMERA" android:required=”false”/>
+    <uses-permission android:name="android.permission.FLASHLIGHT" android:required=”false”/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:required=”false”/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:required=”false”/>
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-    <uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.CALL_PRIVILEGED" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" /> 
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> 
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" android:required=”false”/>
+    <uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" android:required=”false”/>
+    <uses-permission android:name="android.permission.CALL_PHONE" android:required=”false”/>
+    <uses-permission android:name="android.permission.CALL_PRIVILEGED" android:required=”false”/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" android:required=”false”/> 
+    <uses-permission android:name="android.permission.BLUETOOTH" android:required=”false”/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:required=”false”/> 
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
