--- a/TotalCrossVM/builders/android/apps/singleapk/AndroidManifest.xml
+++ b/TotalCrossVM/builders/android/apps/singleapk/AndroidManifest.xml
@@ -49,7 +49,7 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="11" />
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="11" />
     <uses-permission android:name="android.permission.READ_LOGS" android:required="false" />
     <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" android:required="false" />
     <uses-permission android:name="android.permission.INTERNET" android:required="false"/>
@@ -80,15 +80,21 @@
     <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
     <uses-feature android:glEsVersion="0x00020000"/>
     <compatible-screens>
-        <!-- all small size screens -->
         <screen android:screenSize="small" android:screenDensity="ldpi" />
         <screen android:screenSize="small" android:screenDensity="mdpi" />
         <screen android:screenSize="small" android:screenDensity="hdpi" />
         <screen android:screenSize="small" android:screenDensity="xhdpi" />
-        <!-- all normal size screens -->
         <screen android:screenSize="normal" android:screenDensity="ldpi" />
         <screen android:screenSize="normal" android:screenDensity="mdpi" />
         <screen android:screenSize="normal" android:screenDensity="hdpi" />
         <screen android:screenSize="normal" android:screenDensity="xhdpi" />
+        <screen android:screenSize="large" android:screenDensity="ldpi" />
+        <screen android:screenSize="large" android:screenDensity="mdpi" />
+        <screen android:screenSize="large" android:screenDensity="hdpi" />
+        <screen android:screenSize="large" android:screenDensity="xhdpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="ldpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="mdpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="hdpi" />
+        <screen android:screenSize="xlarge" android:screenDensity="xhdpi" />
     </compatible-screens>
 </manifest>
