--- a/TotalCrossVM/builders/android/apps/tcvm/AndroidManifest.xml
+++ b/TotalCrossVM/builders/android/apps/tcvm/AndroidManifest.xml
@@ -65,6 +65,10 @@
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
     <uses-feature android:glEsVersion="0x00020000"/>
+    <supports-screens android:smallScreens="true"
+                      android:normalScreens="true"
+                      android:largeScreens="true"
+                      android:xlargeScreens="true" />
     <compatible-screens>
         <screen android:screenSize="small" android:screenDensity="ldpi" />
         <screen android:screenSize="small" android:screenDensity="mdpi" />
