Now testing tcz for UIControls instead of Test

--- a/TotalCrossVM/builders/vc2013/Launcher3/Launcher3.vcxproj
+++ b/TotalCrossVM/builders/vc2013/Launcher3/Launcher3.vcxproj
@@ -149,7 +149,7 @@
   <ItemGroup>
     <XapFilesInputCollection Include="P:\gitrepo\TotalCross\TotalCrossSDK\dist\vm\TCBase.tcz" />
     <XapFilesInputCollection Include="P:\gitrepo\TotalCross\TotalCrossSDK\dist\vm\TCFont.tcz" />
-    <XapFilesInputCollection Include="P:\gitrepo\TotalCross\TotalCrossVM\src\tests\java\install\win32\Test.tcz" />
+    <XapFilesInputCollection Include="P:\gitrepo\TotalCross\TotalCrossVM\builders\vc2013\Launcher3\UIControls.tcz" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="WMAppManifest.xml">
